# r_stats

./: CHANGELOG.md  Cargo.toml  build.rs  wrapper.h
R/config/: Rmath.h  config.h
R/nmath/: nmath.h
examples/: smoke.rs
nmath/: Rmath.h  fprec.c  fround.c  nmath.h
src/: dpq.rs  lib.rs  puruspe.rs
