[package]
name = "r_stats"
description = "A port of R's `stats` module to Rust."
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "GPLv2"

[build-dependencies]
cc = "1.0.54"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

