[package]
name = "r_mathlib"
description = "A port of R's `nmath` stats module to Rust."
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
categories = ["mathematics"]
keywords = ["statistics", "stats", "r", "nmath", "quantile"]
repository = "https://github.com/derekdreery/r_stats"

[build-dependencies]
cc = "1.0.54"
bindgen = "0.55.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

