[package]
name = "r_mathlib"
description = "A port of R's `nmath` stats module to Rust."
version = "0.2.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
categories = ["mathematics"]
keywords = ["statistics", "stats", "r", "nmath", "quantile"]
repository = "https://github.com/derekdreery/r_stats"

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

